--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,7 +1,3 @@
-* {
-    transition: all 250ms ease-out;
-}
-
 html, body {
     margin: 0px;
     padding: 0px;
@@ -106,16 +102,16 @@ html, body {
     border-radius: 25px;
 }
 
-.settings-title {
+.menu-title {
     margin: 10px;
 }
 
-.settings-heading {
+.menu-heading {
     margin: 0;
     margin-left: 20px;
 }
 
-.settings-div {
+.menu-div {
     padding-left: 40px;
 }
 
@@ -178,13 +174,11 @@ html, body {
     border: 2px solid black;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
 .menu::-webkit-scrollbar {
     display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
 .menu {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 } 
